Páginas Asignatura y Caso terminadas

--- a/css/maki.css
+++ b/css/maki.css
@@ -48,6 +48,7 @@ section {
 	flex-wrap: wrap;
 	height: 100vh;
 	justify-content: center;
+	overflow: hidden;
 }
 section > div {
 	overflow: hidden;
