--- a/css/caso.css
+++ b/css/caso.css
@@ -39,31 +39,47 @@ nav ul a.btn {
 nav ul a.btn-floating i {
 	color: var(--color-primary);
 }
+section {
+	overflow: visible;
+}
 section > div {
 	height: 604px;
 	max-height: 604px;
-	overflow: inherit;
+	overflow: visible;
 	text-align: inherit;
 }
 .row {
 	margin-bottom: 0;
 }
+.col.s4 {
+	padding-left: 0;
+}
+.col.s8 {
+	padding-right: 0;
+}
 .card {
 	border-radius: 1rem;
-	height: 100%;
+	height: 540px;
 	margin: 0;
 	overflow: hidden;
 	padding-bottom: 24px;
+	padding-top: 24px;
 }
 .card-content {
-	height: 516px;
-	max-height: 516px;
+	height: 492px;
+	max-height: 492px;
+	padding-bottom: 0 !important;
+	padding-top: 0 !important;
 }
 .card.ficha {
 }
 .card.ficha .card-content {
 	overflow-y: scroll;
 	padding-bottom: 0;
+}
+.card.ficha .card-content .columnas {
+	column-count: 2;
+	column-gap: 24px;
 }
 .card-content .card-title {
 	color: var(--color-primary);
