Editando asignaturas.css

--- a/css/asignatura.css
+++ b/css/asignatura.css
@@ -140,6 +140,8 @@ section > div.casos .carousel .indicators .indicator-item {
   font-weight: 700;
 }
 
+/* Ariel */
+
 
 /*
   Media queries para estilos CSS de la plantilla de asignatura
