--- a/preguntas/css/pregunta-uno.css
+++ b/preguntas/css/pregunta-uno.css
@@ -19,3 +19,34 @@
 	Sobreescritura de estilos CSS de H5P
 	========================================================================== */
 
+
+
+	ul.h5p-sc-alternatives li.h5p-sc-alternative {
+		/*position: relative;
+		cursor: pointer;
+		box-sizing: border-box;
+		list-style: none;
+		margin: .5em 0;
+		padding: .4em 1.2em;
+		overflow: hidden;
+		-webkit-border-radius: 0.25em;
+		-moz-border-radius: 0.25em;
+		border-radius: 0.25em;
+		transition: -webkit-transform 0.5s ease-in-out, width 0.5s ease-in-out;
+		transition: transform 0.5s ease-in-out, width 0.5s ease-in-out;*/
+
+		border: #f3f3f3;
+		background-color: #f7f7f7;
+		color: #000;
+		box-shadow: none !important;
+	}
+
+	
+
+	.h5p-single-choice-set .h5p-joubelui-progressbar {
+		/*height: 5px;
+		background-color: rgb(102, 102, 102);
+		box-shadow: none;
+		z-index: 1;*/
+		display: none !important;
+	}
