--- a/preguntas/css/h5p.css
+++ b/preguntas/css/h5p.css
@@ -14,50 +14,33 @@
 	========================================================================== */
 
 
-
 /*
 	Sobreescritura de estilos CSS de H5P
 	========================================================================== */
 
-	.h5p-iframe > body {
-		/*align-items: center;
-		display: flex;
-		justify-content: center;*/
-	}
-	.h5p-iframe > body * {
-		font-family: 'Montserrat', sans-serif !important;
-	}
-	.h5p-interactive-video .h5p-control.h5p-star,
-	.h5p-interactive-video .h5p-slider,
-	.h5p-interactive-video .h5p-controls-right {
-		visibility: hidden !important;
-	}
+.h5p-iframe > body {
+	align-items: center;
+	display: flex;
+}
+.h5p-iframe > body * {
+	font-family: 'Montserrat', sans-serif !important;
+}
 
 	
 /*
 	Formateo contenedor general de pregunta H5P
 	===========================================================================	*/
-	.h5p-content {
-		/*position: relative;
-		background: #fefefe;
-		border-bottom: none;
-		box-sizing: border-box;
-		-moz-box-sizing: border-box;*/
-		border: none;
-	}
-	.h5p-content ul.h5p-actions {
-		/*box-sizing: border-box;
-		-moz-box-sizing: border-box;
-		overflow: hidden;
-		list-style: none;
-		padding: 0px 10px;
-		margin: 0;
-		height: 25px;
-		font-size: 12px;
-		background: #FAFAFA;
-		border-top: 1px solid #EEE;
-		border-bottom: 1px solid #EEE;
-		clear: both;
-		font-family: Sans-Serif;*/
-		display: none !important;
-	}
+
+.h5p-content {
+	border: none;
+}
+.h5p-wrapper {
+	min-height: 492px !important;
+	max-height: 492px !important;
+	min-width: 570px !important;
+	max-width: 570px !important;
+}
+.h5p-content ul.h5p-actions {
+	display: none !important;
+}
+
