--- a/preguntas/css/pregunta-dos.css
+++ b/preguntas/css/pregunta-dos.css
@@ -18,51 +18,40 @@
 /*
 	Sobreescritura de estilos CSS de H5P
 	========================================================================== */
-/* Ordenar*/
+
+	.h5p-question-introduction{
+		display: none;
+		margin: 0 0 20px 0;
+	}
+
+
+	/* Ordenar*/
 	.contenidor-interaccion{
 		width: 80%;
 		float: right;
 		padding: 5px;
 	}
+
 	.h5p-sort-paragraphs .h5p-sort-paragraphs-paragraph {
-		/*background-color: #eee;
-		border-color: rgba(0, 0, 0, 0);
-		border-radius: .3em;
-		border-style: solid;
-		border-width: .25em;
-		cursor: move;
-		display: flex;
-		flex-direction: row;
-		user-select: none;
-		-khtml-user-select: none;
-		-moz-user-select: none;
-		-ms-user-select: none;
-		-webkit-touch-callout: none;
-		-webkit-user-select: none;
-		word-break: break-word;*/
-		background-color: #f7f7f7;
+		border-width: 1px;
+	}
+
+	.h5p-sort-paragraphs .h5p-sort-paragraphs-paragraph {
+		background-color: #f9f9f9;
+		border: solid 1px #d1d1d1;
 		box-shadow: none;
-		font-size: 13px;
+		font-size: 12px;
 		line-height: 1.5;
 		padding: 0;
-		height: 66px;
+		height: 75px;
 	}
 
 	.h5p-sort-paragraphs .h5p-sort-paragraphs-separator {
-		/*border-radius: .3em;
-		text-align: center;
-		width: calc(100% - .5em);
-		margin-left: auto;
-		margin-right: auto;*/
 		height: .1em;
 		margin: .2em 0;
 	}
 
 	.h5p-sort-paragraphs .h5p-sort-paragraphs-paragraph-button-container {
-		/* display: flex;
-		flex-shrink: 0;
-		justify-content: center;
-		width: 3.25em; */
 		flex-direction: column;
 		align-items: center;
 	}
@@ -73,22 +62,6 @@
 
 
 	.h5p-sort-paragraphs .h5p-sort-paragraphs-button {
-		/*align-items: center;
-		background-color: #fff;
-		background-position: center;
-		background-repeat: no-repeat;
-		background-size: 1.15em 1.15em;
-		border: 2px solid rgba(0, 0, 0, 0);
-		border-radius: .3em;
-		color: #1a73d9;
-		cursor: pointer;
-		display: flex;
-		flex-shrink: 0;
-		height: 2.75em;
-		justify-content: center;
-		padding: 0;
-		width: 2.75em;*/
-
 		box-shadow: none;
 		min-height: 30px;
 		min-width: 30px;
@@ -113,25 +86,45 @@
 		background-color: #544;*/
 	}
 
-	.h5p-question-content{
-		width: 97%;
-		height: 390px;
+	.h5p-question-image{
+		width: 15%;
 		float: left;
-		overflow: hidden;
-		overflow-y: scroll;
-		background: url(../../images/recurso_1.png) top left no-repeat;
-		background-size: contain;
+		margin-top: 35px;
 	}
 
-	.h5p-sort-paragraphs-content 
-	/*.h5p-sort-paragraphs-view-state-results 
-	.h5p-sort-paragraphs-view-state-solutions*/{
-		width: 800px;
+	.h5p-question-content{
+		width: 85%;
+		margin: 0;
+		float: left;
+	}
+
+	.h5p-question-image img {
+		width: 85px;
+	}
+
+	.h5p-sort-paragraphs-content {
     	float: right;
 		padding: 5px;
 	}
 
 	.h5p-question-buttons.h5p-question-visible {
 		text-align: right;
+	}
+
+
+	/* Selected */
+	.h5p-sort-paragraphs .h5p-sort-paragraphs-paragraph.h5p-sort-paragraphs-selected{
+		background:#ebefff;
+		border-color:#0c94e3;
+		box-shadow:none; 
+		color: #000;
+	}
+
+
+	/* Orden correcto */
+	.h5p-sort-paragraphs .h5p-sort-paragraphs-paragraph.h5p-sort-paragraphs-disabled:not(.animate-translation):not(.h5p-sort-paragraphs-wrong):not(.h5p-sort-paragraphs-correct) {
+		background-color: #f1f7f2;
+		border-color: #ccc;
+		color: #000000;
 	}
 
