--- a/preguntas/css/pregunta-uno.css
+++ b/preguntas/css/pregunta-uno.css
@@ -18,9 +18,6 @@
 /*
 	Sobreescritura de estilos CSS de H5P
 	========================================================================== */
-
-
-
 	ul.h5p-sc-alternatives li.h5p-sc-alternative {
 		/*position: relative;
 		cursor: pointer;
@@ -49,4 +46,36 @@
 		box-shadow: none;
 		z-index: 1;*/
 		display: none !important;
+	}
+
+	
+	/* Seleccion multiple */
+	.h5p-multichoice .h5p-alternative-container {
+		background: #f6f4f4;
+		font-size: 14px;
+		-webkit-box-shadow: none !important;
+		-moz-box-shadow: none !important;
+		box-shadow: none !important;
+	}
+
+	.h5p-multichoice .h5p-answer .h5p-alternative-container:before {
+		color: #0c93e4;
+	}
+	.h5p-multichoice .h5p-answer[role="checkbox"] .h5p-alternative-container:before {
+		font-weight: 700;
+	}
+
+	/* Alternativa seleccionada */
+	.h5p-multichoice .h5p-answer[aria-checked="true"] .h5p-alternative-container {
+		border: 1px solid #388EFF;
+	}
+
+
+	.h5p-multichoice .h5p-answer.h5p-correct .h5p-alternative-container{
+		background: #78bd9c17;
+	}
+	.h5p-multichoice .h5p-should .h5p-alternative-container{
+		background-color: #78bd9c17;
+    	color: #265c42;
+    	font-weight: 700;
 	}
