--- a/css/caso.css
+++ b/css/caso.css
@@ -35,9 +35,7 @@ nav ul a.btn-floating,
 nav ul a.btn {
 	background-color: #ffffff;
 	color: var(--color-primary);
-}
-nav .btn {
-	margin-left: 0 !important;
+	margin: 0 8px 0 0 !important;
 }
 nav ul a.btn-floating i {
 	color: var(--color-primary);
@@ -73,8 +71,6 @@ section > div {
 	max-height: 492px;
 	padding-bottom: 0 !important;
 	padding-top: 0 !important;
-}
-.card.ficha {
 }
 .card.ficha .card-content {
 	overflow-y: scroll;
