--- a/preguntas/css/h5p.css
+++ b/preguntas/css/h5p.css
@@ -13,6 +13,11 @@
 	Domain Path: /languages/
 	========================================================================== */
 
+	:root {
+		--color-primary: #0c94e3;
+		--color-secondary: #0c94e3;
+		--color-accent: #85c9f0;
+	}
 
 /*
 	Sobreescritura de estilos CSS de H5P
@@ -21,12 +26,20 @@
 .h5p-iframe > body {
 	align-items: center;
 	display: flex;
-}
-.h5p-iframe > body {
 	font-family: 'Montserrat', sans-serif !important;
 }
+button {
+	background-color: var(--color-primary) !important;
+	border-radius: .6rem !important;
+	font-family: 'Montserrat', sans-serif !important;
+	font-weight: 500;
+}
+button:hover,
+button:focus {
+	background-color: var(--color-accent) !important;
+}
 
-	
+
 /*
 	Formateo contenedor general de pregunta H5P
 	===========================================================================	*/
@@ -43,8 +56,9 @@
 .h5p-content ul.h5p-actions {
 	display: none !important;
 }
-
-.h5p-question-buttons.h5p-question-visible{
+.h5p-question-buttons {
 	text-align: right;
 }
-
+.h5p-question-buttons button {
+	margin-left: 15px;
+}
