--- a/preguntas/css/h5p.css
+++ b/preguntas/css/h5p.css
@@ -24,7 +24,7 @@
 	========================================================================== */
 
 .h5p-iframe > body {
-	align-items: center;
+	/*align-items: center;*/
 	display: flex;
 	font-family: 'Montserrat', sans-serif !important;
 }
